--- a/screen/src/index.css
+++ b/screen/src/index.css
@@ -1,3 +1,8 @@
+
+
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #203369 !important;
+  /* font-family: 'Source Sans'; */
+
+  /* background-image: "url(../img/tw-logo.jpg" */
+  
 }
 
 code {
