--- a/screen/src/index.css
+++ b/screen/src/index.css
@@ -1,5 +1,13 @@
 
+/* Portrait (Sero) Mode */
+@media screen and (min-width: 3840px) and (max-height: 2160px) {
+  /* Your portrait-specific styles here */
+}
 
+/* Landscape Mode */
+@media screen and (min-width: 2160px) and (max-height: 3840px) {
+  /* Your landscape-specific styles here */
+}
 
 
 
@@ -20,23 +28,7 @@ body {
   
 }
 
-body.no-background-image {
-  background-image: none !important;
-}
-
-
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-/* body::before {
-  background-image: url('./img/tw_white.png') !important;
-  background-repeat: no-repeat !important;
-  background-size: 50% !important;
-  background-position: 70% 30% !important;
-  opacity: 0.75;
-  content: "";
-
-} */
