json med test data
json med test data

--- a/screen/src/index.css
+++ b/screen/src/index.css
@@ -12,6 +12,7 @@
 
 body {
   margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -21,7 +22,7 @@ body {
   /* SKIFT BAGGRUNDSBILLEDE HER */
   background-image: url('./img/background.png') !important;
   background-repeat: no-repeat !important;
-  background-size: 253% !important;
+  background-size: 255% !important;
   background-position: 45% center !important;
 
 }
