--- a/screen/src/index.css
+++ b/screen/src/index.css
@@ -20,9 +20,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   
   /* SKIFT BAGGRUNDSBILLEDE HER */
-  background-image: url('./img/background.png') !important;
+  background-image: url('./img/blobs-bg.png') !important;
   background-repeat: no-repeat !important;
-  background-size: 255% !important;
+  background-size: 400% !important;
   background-position: 45% center !important;
 
 }
